# pyhepmc

./: .clang-format-ignore  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSES_bundled  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  generate_docs.py  generate_docstrings.py  generate_pretty_names.py  get_pybind11_inc.py  get_pybind11_include.py  license_util.py  meson.build  mkdocs.yml  pyhepmc_ng.py  pyproject.toml  quote.py  requirements.txt  setup.cfg  setup.py  setup_utils.py  upload.sh
.ci/: azure-pipeline-build.yml  build-requirements.txt  build-wheels.sh  test-requirements.txt
.ci_bak/: azure-tests.yml
.github/workflows/: coverage.yml  docs.yml  sphinx.yml  test.yml  wheels.yml
bench/: test_io.py
docs/: Doxyfile  about.rst  build.py  citation.rst  conf.py  draw.py  examples.rst  generate_about.py  generate_index.py  generate_reference.py  index.md  index.rst  index.rst.in  reference.rst
docs/examples/: basics.ipynb  processing.ipynb
examples/: visualization.ipynb
pyhepmc_ng/: __init__.py  view.py
src/: UnparsedAttribute.hpp  accessor.hpp  asarray.cpp  attribute_conversion.cpp  attributemapview.cpp  attributemapview.hpp  attributes_view.cpp  attributes_view.hpp  bench.cpp  bindings.cpp  core.cpp  crosssection_patches.cpp  equal.cpp  from_hepevent.cpp  from_hepevt.cpp  geneventdata.cpp  geneventdata.hpp  hepevt_wrapper.h  io.cpp  main.cpp  numpy_api.cpp  numpy_api.hpp  pointer.hpp  pybind.h  pybind.hpp  pyiostream.cpp  pyiostream.hpp  pystream.cpp  pystream.hpp  repr.cpp  repr.hpp  runinfo_attributes_view.cpp
src/HepMC3/: AUTHORS  CMakeLists.txt  ChangeLog  DESIGN  HepMC-config.in  README-for-developers  README.md  TODO  make.inc
src/HepMC3/cmake/Modules/: FindHepMC2.cmake  FindPhotospp.cmake  FindPythia8.cmake  local_install.cmake
src/HepMC3/cmake/Templates/: HepMCConfig.cmake.in
src/HepMC3/doc/doxygen/: Doxyfile  DoxygenLayout.xml  building.txt  differences.txt  features.txt  mainpage.txt  modules.txt
src/HepMC3/examples/: CMakeLists.txt
src/HepMC3/examples/ConvertExample/: CMakeLists.txt  convert_example.cc
src/HepMC3/examples/ConvertExample/include/: WriterRootTreeOPAL.h
src/HepMC3/examples/ConvertExample/src/: WriterRootTreeOPAL.cc
src/HepMC3/examples/LHEFExample/: CMakeLists.txt  LHEF_example.lhe  LHEF_example_cat.cc  LHEF_example_cmp.lhe
src/HepMC3/examples/Pythia8Example/: pythia8_example.cc
src/HepMC3/examples/RootIOExample/: CMakeLists.txt  rootIO_example_read.cc  rootIO_example_write.cc
src/HepMC3/examples/RootIOExample2/: CMakeLists.txt  class_example_read.cc  class_example_write.cc
src/HepMC3/examples/RootIOExample2/include/: LinkDef.h  MyClass.h  MyRunClass.h  myclass_Classes.h
src/HepMC3/examples/RootIOExample2/src/: MyClass.cc  MyRunClass.cc
src/HepMC3/examples/RootIOExample3/: CMakeLists.txt  rootIOTree_example_read.cc  rootIOTree_example_write.cc
src/HepMC3/include/HepMC/: Attribute.h  Common.h  Config.h  FourVector.h  GenCrossSection.h  GenEvent.h  GenHeavyIon.h  GenParticle.h  GenPdfInfo.h  GenRunInfo.h  GenVertex.h  HEPEVT_Wrapper.h  LHEF.h  LHEFAttributes.h  Print.h  ReaderAscii.h  ReaderAsciiHepMC2.h  Units.h  WriterAscii.h
src/HepMC3/include/HepMC/Search/: FindParticles.h
src/HepMC3/interfaces/Photospp/include/Photos/: PhotosHepMC3Event.h  PhotosHepMC3Particle.h
src/HepMC3/interfaces/Photospp/src/: PhotosHepMC3Event.cc  PhotosHepMC3Particle.cc
src/HepMC3/interfaces/Tauolapp/include/Tauola/: TauolaHepMC3Event.h  TauolaHepMC3Particle.h
src/HepMC3/interfaces/Tauolapp/src/: TauolaHepMC3Event.cxx  TauolaHepMC3Particle.cxx
src/HepMC3/interfaces/mc-tester/include/: HepMC3Event.h  HepMC3Particle.h
src/HepMC3/interfaces/mc-tester/src/: HepMC3Event.cxx  HepMC3Particle.cxx
src/HepMC3/interfaces/pythia8/src/: Pythia8ToHepMC3.cc
src/HepMC3/rootIO/: CMakeLists.txt
src/HepMC3/rootIO/include/: LinkDef.hh  rootIO_Classes.hh
src/HepMC3/rootIO/include/HepMC/: ReaderRoot.h  ReaderRootTree.h  WriterRoot.h  WriterRootTree.h
src/HepMC3/rootIO/src/: ReaderRoot.cc  ReaderRootTree.cc  Streamers.cc  WriterRoot.cc  WriterRootTree.cc
src/HepMC3/src/: GenCrossSection.cc  GenEvent.cc  GenHeavyIon.cc  GenParticle.cc  GenPdfInfo.cc  GenRunInfo.cc  GenVertex.cc  HEPEVT_Wrapper.cc  LHEFAttributes.cc  Print.cc  ReaderAscii.cc  ReaderAsciiHepMC2.cc  ReaderHEPEVT.cc  WriterAscii.cc
src/HepMC3/validation/: CMakeLists.txt  README  SETUP.C  compare.mc-tester.sh  make.tools.inc  make.toolslocation.inc  validation.cc
src/HepMC3/validation/configs/: default.conf
src/HepMC3/validation/configs/pythia8/: pythia8_ee_to_Z_to_tautau.conf  pythia8_pp_to_Zprime_to_tautau.conf
src/HepMC3/validation/include/: FileValidationTool.h  LinkDef.h  McTesterValidationTool.h  PhotosValidationTool.h  PythiaValidationTool.h  RootTool.h  RootTool2.h  RootTool2_includes.h  RootTool2_serialized_class.h  SimpleEventTool.h  TauolaValidationTool.h  Timer.h  ValidationControl.h  ValidationTool.h
src/HepMC3/validation/src/: FileValidationTool.cc  McTesterValidationTool.cc  PhotosValidationTool.cc  PythiaValidationTool.cc  RootTool.cc  RootTool2.cc  SimpleEventTool.cc  TauolaValidationTool.cc  ValidationControl.cc
src/pyhepmc/: __init__.py  _adddoc.py  _attributemapview.py  _attributes.py  _autodoc.py  _deprecated.py  _doc.py  _graphviz.py  _io.py  _prettify.py  _setup.py  _version.py  io.py  view.py
src/pyhepmc_ng/: __init__.py  _io.py  view.py
subprojects/: boost-mp11.wrap  cpp-member-accessor.wrap  hepmc3.wrap
subprojects/packagefiles/HepMC3/: meson.build
subprojects/packagefiles/boost-mp11/: meson.build
subprojects/packagefiles/cpp-member-accessor/: meson.build
tests/: last_event_issue.hepmc  test_basic.py  test_deprecated.py  test_from_hepevt.py  test_genruninfo.py  test_init.py  test_io.py  test_pyhepmc.py  test_setup.py  test_view.py
