[metadata]
name = pyhepmc
# version = attr: pyhepmc._version.version
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Pythonic interface to the HepMC3 C++ library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/pyhepmc
project_urls =
    Documentation = https://github.com/scikit-hep/pyhepmc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Scientific/Engineering
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = pyhepmc
python_requires = >=3.7

[options.extras_require]
test =
    numpy
    pytest
    graphviz
    particle

[flake8]
max-line-length = 90
ignore = E203, W503

[pydocstyle]
convention = numpy
