[metadata]
name = pyhepmc
author = Hans Dembinski
author_email = hans.dembinski@gmail.com
description = Pythonic interface to the HepMC3 C++ library licensed under LGPL-v3.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/pyhepmc
project_urls =
    Documentation = https://scikit-hep.org/pyhepmc/
license = BSD 3-Clause
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Scientific/Engineering
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = pyhepmc
python_requires = >=3.7
install_requires = numpy

[options.extras_require]
test =
    pytest
    particle
doc =
    sphinx
    sphinx-rtd-theme
    nbsphinx
    ipython
    ipykernel

[flake8]
max-line-length = 90
extend-ignore = E203, W503

[pydocstyle]
convention = numpy
